Bootstrap, search by ID

--- a/bookreader-frontend/index.html
+++ b/bookreader-frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Book Reader</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="index.css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -12,15 +13,13 @@
 </head>
 <body>
     <h1 id="main_title">Book Reader</h1>
+    <button id="all" type="button" class="btn btn-primary">View All</button>
 
-    <h2 class="sub_title">Get Book</h2>
+    <h2 class="sub_title">Search</h2>
 
-    <label> Book Name: <input type="text" name="name" id="dogName" /></label><br />
-    <p id="submit" class="btn">Submit</p>
-
+    <label> Book ID: <input type="text" name="book_id" id="book_id" /></label><br />
+    <button id="submit" type="button" class="btn btn-primary">Search</button>
     
-
-    <h2 class="sub_title">All Books</h2>
     <div id="books">
         
 
