refactoring and adding to index

--- a/bookreader-frontend/index.html
+++ b/bookreader-frontend/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1 id="main_title">Book Reader</h1>
-    <button id="all" type="button" class="btn btn-primary">View All</button>
+    <button id="view_all" type="button" class="btn btn-primary">View All</button>
 
     <h2 class="sub_title">Search</h2>
 
