Added puts to create in books controller

--- a/bookreader-frontend/index.html
+++ b/bookreader-frontend/index.html
@@ -28,7 +28,7 @@
       <label> Book Name: <input type="text" name="book_name" id="book_name" /></label><br />
       <label> Author Name: <input type="text" name="author_name" id="author_name" /></label><br />
       <label> Book Contents: <input type="text" name="book_contents" id="book_contents" /></label><br />
-      <input id="add_new" type="submit" value="Create Book" class="btn btn-primary">
+      <input id="create_book" type="submit" value="Create Book" class="btn btn-primary">
       <p id="create_book_message"></p>
     </form>
 
