Delete and Create

--- a/bookreader-frontend/index.html
+++ b/bookreader-frontend/index.html
@@ -16,7 +16,7 @@
     <h1 id="main_title">Book Reader</h1>
     <hr />
     <form>
-      <input type="submit" id="view_all" value="View All" class="btn btn-primary">
+      <input type="submit" id="view_all" value="Load All Books" class="btn btn-primary">
     </form>
     <form>
       <input type="submit" id="clear" value="Clear" class="btn btn-primary">
