Load All/Show All

--- a/bookreader-frontend/index.html
+++ b/bookreader-frontend/index.html
@@ -19,6 +19,9 @@
       <input type="submit" id="load_all" value="Load All Books" class="btn btn-primary">
     </form>
     <form>
+      <input type="submit" id="show_all" value="Show All Books" class="btn btn-primary">
+    </form>
+    <form>
       <input type="submit" id="clear" value="Clear" class="btn btn-primary">
     </form>
 
