--- a/bookreader-frontend/index.html
+++ b/bookreader-frontend/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   
-    <h1 id="main_title">Book Reader</h1>
+    <h1 id="main_title">Book</h1>
     <hr />
     <form>
       <input type="submit" id="load_all" value="Load All Books" class="btn btn-primary">
@@ -22,7 +22,7 @@
       <input type="submit" id="show_all" value="Show All Books" class="btn btn-primary">
     </form>
     <form>
-      <input type="submit" id="clear" value="Clear" class="btn btn-primary">
+      <input type="submit" id="clear" value="Clear All Books" class="btn btn-primary">
     </form>
 
     <hr />
